// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RepliesWithParent > Snapshots > should match snapshot for empty state 1`] = `
<div>
  <div
    data-testid="timeline-empty"
  >
    No replies
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot for error state 1`] = `
<div>
  <div
    data-testid="timeline-initial-error"
  >
    Error: 
    Network error
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot for loading state 1`] = `
<div>
  <div
    data-testid="timeline-loading"
  >
    Loading...
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot with replies (no parents) 1`] = `
<div>
  <div
    data-testid="container"
  >
    <div
      class="space-y-4"
      data-testid="container"
    >
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class=""
          data-testid="container"
        >
          <div
            data-is-reply="true"
            data-testid="post-author1:reply1"
          />
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class=""
          data-testid="container"
        >
          <div
            data-is-reply="true"
            data-testid="post-author2:reply2"
          />
        </div>
      </div>
      <div
        class="h-[20px]"
        data-testid="container"
      />
    </div>
  </div>
</div>
`;

exports[`RepliesWithParent > Snapshots > should match snapshot with replies and parents 1`] = `
<div>
  <div
    data-testid="container"
  >
    <div
      class="space-y-4"
      data-testid="container"
    >
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          data-is-reply="false"
          data-testid="post-author3:parent1"
        />
        <div
          class="pl-3"
          data-testid="container"
        >
          <div
            data-testid="post-thread-spacer"
          />
        </div>
        <div
          class="pl-3"
          data-testid="container"
        >
          <div
            data-is-reply="true"
            data-testid="post-author1:reply1"
          />
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          data-is-reply="false"
          data-testid="post-author4:parent2"
        />
        <div
          class="pl-3"
          data-testid="container"
        >
          <div
            data-testid="post-thread-spacer"
          />
        </div>
        <div
          class="pl-3"
          data-testid="container"
        >
          <div
            data-is-reply="true"
            data-testid="post-author2:reply2"
          />
        </div>
      </div>
      <div
        class="h-[20px]"
        data-testid="container"
      />
    </div>
  </div>
</div>
`;
